[gd_scene load_steps=23 format=3 uid="uid://c3o5r8wg6a8y7"]

[ext_resource type="Texture2D" uid="uid://coigqqrscohfm" path="res://assets/sprites/ui/paused_window.png" id="1_7wxfx"]
[ext_resource type="Script" path="res://scripts/pause_menu.gd" id="1_hi3lf"]
[ext_resource type="Texture2D" uid="uid://7bk3y871kpqv" path="res://assets/sprites/ui/buttons/resume.png" id="2_bamqa"]
[ext_resource type="PackedScene" uid="uid://byauqoqkqrjei" path="res://scenes/templates/button_with_sfx.tscn" id="4_6rp7f"]
[ext_resource type="Texture2D" uid="uid://cqkr505ox6sk" path="res://assets/sprites/ui/buttons/restart.png" id="5_3u08u"]
[ext_resource type="Texture2D" uid="uid://drqwslpwl3k4d" path="res://assets/sprites/ui/buttons/settings.png" id="6_m6326"]
[ext_resource type="Texture2D" uid="uid://drf8rj61kohxs" path="res://assets/sprites/ui/buttons/back_menu.png" id="7_ws4jg"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_38nd8"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_exjn1"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_c2j3t"]
texture = ExtResource("1_7wxfx")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_x5rho"]
texture = ExtResource("2_bamqa")
modulate_color = Color(0.901961, 0.901961, 0.901961, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_25w6w"]
texture = ExtResource("2_bamqa")
modulate_color = Color(0.784314, 0.784314, 0.784314, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_epcg2"]
texture = ExtResource("2_bamqa")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_vrjag"]
texture = ExtResource("5_3u08u")
modulate_color = Color(0.901961, 0.901961, 0.901961, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_vu0bd"]
texture = ExtResource("5_3u08u")
modulate_color = Color(0.784314, 0.784314, 0.784314, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_r2hyb"]
texture = ExtResource("5_3u08u")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_wy4jx"]
texture = ExtResource("6_m6326")
modulate_color = Color(0.901961, 0.901961, 0.901961, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_o2af7"]
texture = ExtResource("6_m6326")
modulate_color = Color(0.784314, 0.784314, 0.784314, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_kss0y"]
texture = ExtResource("6_m6326")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_lga38"]
texture = ExtResource("7_ws4jg")
modulate_color = Color(0.901961, 0.901961, 0.901961, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_4w1fw"]
texture = ExtResource("7_ws4jg")
modulate_color = Color(0.784314, 0.784314, 0.784314, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_7fiyb"]
texture = ExtResource("7_ws4jg")

[node name="PauseMenu" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 360.0
offset_bottom = 640.0
script = ExtResource("1_hi3lf")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.588235)

[node name="CancelArea" parent="." instance=ExtResource("4_6rp7f")]
layout_mode = 0
offset_right = 360.0
offset_bottom = 640.0
theme_override_styles/focus = SubResource("StyleBoxEmpty_38nd8")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_38nd8")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_38nd8")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_38nd8")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_38nd8")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_38nd8")
theme_override_styles/hover = SubResource("StyleBoxEmpty_38nd8")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_38nd8")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_38nd8")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_38nd8")
theme_override_styles/normal = SubResource("StyleBoxEmpty_exjn1")
play_sfx = false

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -140.0
offset_top = -236.5
offset_right = 140.0
offset_bottom = 236.5
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_c2j3t")

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -105.0
offset_top = -137.0
offset_right = 105.0
offset_bottom = 137.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 6

[node name="ResumeButton" parent="Panel/VBoxContainer" instance=ExtResource("4_6rp7f")]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxTexture_x5rho")
theme_override_styles/hover_pressed = SubResource("StyleBoxTexture_x5rho")
theme_override_styles/hover_mirrored = SubResource("StyleBoxTexture_x5rho")
theme_override_styles/hover = SubResource("StyleBoxTexture_x5rho")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxTexture_25w6w")
theme_override_styles/pressed = SubResource("StyleBoxTexture_25w6w")
theme_override_styles/normal_mirrored = SubResource("StyleBoxTexture_epcg2")
theme_override_styles/normal = SubResource("StyleBoxTexture_epcg2")

[node name="RestartButton" parent="Panel/VBoxContainer" instance=ExtResource("4_6rp7f")]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxTexture_vrjag")
theme_override_styles/hover_pressed = SubResource("StyleBoxTexture_vrjag")
theme_override_styles/hover_mirrored = SubResource("StyleBoxTexture_vrjag")
theme_override_styles/hover = SubResource("StyleBoxTexture_vrjag")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxTexture_vu0bd")
theme_override_styles/pressed = SubResource("StyleBoxTexture_vu0bd")
theme_override_styles/normal_mirrored = SubResource("StyleBoxTexture_r2hyb")
theme_override_styles/normal = SubResource("StyleBoxTexture_r2hyb")

[node name="SettingsButton" parent="Panel/VBoxContainer" instance=ExtResource("4_6rp7f")]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxTexture_wy4jx")
theme_override_styles/hover_pressed = SubResource("StyleBoxTexture_wy4jx")
theme_override_styles/hover_mirrored = SubResource("StyleBoxTexture_wy4jx")
theme_override_styles/hover = SubResource("StyleBoxTexture_wy4jx")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxTexture_o2af7")
theme_override_styles/pressed = SubResource("StyleBoxTexture_o2af7")
theme_override_styles/normal_mirrored = SubResource("StyleBoxTexture_kss0y")
theme_override_styles/normal = SubResource("StyleBoxTexture_kss0y")

[node name="BackButton" parent="Panel/VBoxContainer" instance=ExtResource("4_6rp7f")]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxTexture_lga38")
theme_override_styles/hover_pressed = SubResource("StyleBoxTexture_lga38")
theme_override_styles/hover_mirrored = SubResource("StyleBoxTexture_lga38")
theme_override_styles/hover = SubResource("StyleBoxTexture_lga38")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxTexture_4w1fw")
theme_override_styles/pressed = SubResource("StyleBoxTexture_4w1fw")
theme_override_styles/normal_mirrored = SubResource("StyleBoxTexture_7fiyb")
theme_override_styles/normal = SubResource("StyleBoxTexture_7fiyb")

[connection signal="pressed" from="CancelArea" to="." method="_on_cancel_area_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/BackButton" to="." method="_on_back_button_pressed"]
